--- a/ev_parking_assistant/.env
+++ b/ev_parking_assistant/.env
@@ -7,3 +7,7 @@ QnAKnowledgebaseId=1c5b3b8a-108e-4381-902f-73576fc180c0
 QnAAuthKey=b96d2989-064c-423c-9e52-13703e972c56
 QnAEndpointHostName=https://ev-parking-assistant-qnakb.azurewebsites.net/qnamaker
 
+LuisAppId=126aa626-be74-47de-98ac-659a711fc3fc
+LuisAPIKey=1ef3cb5227034818a092770acc17b3c0
+LuisAPIHostName=https://westus.api.cognitive.microsoft.com/
+
