--- a/.github/workflows/main_ev-parking-assistant-app-service.yml
+++ b/.github/workflows/main_ev-parking-assistant-app-service.yml
@@ -31,7 +31,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: node-app
-          path: .
+          path: ./ev_parking_assistant
 
   deploy:
     runs-on: ubuntu-latest
