--- a/.github/workflows/main_ev-parking-assistant-app-service.yml
+++ b/.github/workflows/main_ev-parking-assistant-app-service.yml
@@ -31,8 +31,8 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: node-app
-          app_location: "/ev_parking_assistant/ev_parking_assistant"
-          path: .
+          app_location: "/ev_parking_assistant/"
+          path: "/ev_parking_assistant/"
 
   deploy:
     runs-on: ubuntu-latest
