--- a/ev_parking_assistant/package.json
+++ b/ev_parking_assistant/package.json
@@ -1,15 +1,15 @@
 {
-    "name": "echobot",
+    "name": "testbot",
     "version": "1.0.0",
-    "description": "Bot Builder v4 echo bot sample",
-    "author": "Microsoft",
+    "description": "Demonstrate the core capabilities of the Microsoft Bot Framework",
+    "author": "Generated using Microsoft Bot Builder Yeoman generator v4.12.0",
     "license": "MIT",
     "main": "index.js",
     "scripts": {
         "start": "node ./index.js",
         "watch": "nodemon ./index.js",
         "lint": "eslint .",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "echo \"Error: no test specified\""
     },
     "repository": {
         "type": "git",
@@ -17,11 +17,9 @@
     },
     "dependencies": {
         "botbuilder": "^4.16.0",
-        "botbuilder-ai": "^4.16.0",
+        "botbuilder-ai": "^4.12.0",
         "dotenv": "^8.2.0",
-        "formidable": "^3.2.4",
-        "restify": "~8.6.0",
-        "uuid": "^8.3.2"
+        "restify": "~8.5.1"
     },
     "devDependencies": {
         "eslint": "^7.0.0",
