--- a/ev_parking_assistant/package.json
+++ b/ev_parking_assistant/package.json
@@ -1,8 +1,8 @@
 {
-    "name": "testbot",
+    "name": "echobot",
     "version": "1.0.0",
-    "description": "Demonstrate the core capabilities of the Microsoft Bot Framework",
-    "author": "Generated using Microsoft Bot Builder Yeoman generator v4.12.0",
+    "description": "Bot Builder v4 echo bot sample",
+    "author": "Microsoft",
     "license": "MIT",
     "main": "index.js",
     "scripts": {
@@ -18,6 +18,7 @@
     "dependencies": {
         "botbuilder": "^4.16.0",
         "botbuilder-ai": "^4.12.0",
+        "formidable": "^3.2.4",
         "dotenv": "^8.2.0",
         "restify": "~8.5.1"
     },
