--- a/ev_parking_assistant/package.json
+++ b/ev_parking_assistant/package.json
@@ -20,7 +20,8 @@
         "botbuilder-ai": "^4.12.0",
         "formidable": "^3.2.4",
         "dotenv": "^8.2.0",
-        "restify": "~8.5.1"
+        "restify": "~8.5.1",
+        "uuid": "^8.3.2"
     },
     "devDependencies": {
         "eslint": "^7.0.0",
