--- a/ev_parking_assistant/package.json
+++ b/ev_parking_assistant/package.json
@@ -9,18 +9,18 @@
         "start": "node ./index.js",
         "watch": "nodemon ./index.js",
         "lint": "eslint .",
-        "test": "echo \"Error: no test specified\" & exit 1"
+        "test": "echo \"Error: no test specified\""
     },
     "repository": {
         "type": "git",
         "url": "https://github.com"
     },
     "dependencies": {
-        "botbuilder": "^4.16.0",
-        "botbuilder-ai": "^4.12.0",
+        "botbuilder": "~4.16.0",
+        "botbuilder-ai": "^4.16.0",
         "formidable": "^3.2.4",
         "dotenv": "^8.2.0",
-        "restify": "~8.5.1",
+        "restify": "~8.6.0",
         "uuid": "^8.3.2"
     },
     "devDependencies": {
